Fixed title overflow on list and tasks

--- a/client/src/components/Task/styles.scss
+++ b/client/src/components/Task/styles.scss
@@ -3,11 +3,14 @@
   margin: 5px 0;
   border-radius: 5px;
   width: 100%;
-  height: 40px;
+  min-height: 40px;
   padding: 10px;
   cursor: pointer;
   
   &__title {
     font-family: "Montserrat", sans-serif;
+    overflow-wrap: break-word;
+    max-width: 85%;
+    margin: 0;
   }
 }
